美化表单元素

--- a/使用 CSS 计数器实现九宫格自动提示超出数量/index.html
+++ b/使用 CSS 计数器实现九宫格自动提示超出数量/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-07-30 11:09:22
- * @LastEditTime: 2021-07-30 15:19:16
+ * @LastEditTime: 2021-07-31 00:00:36
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \css3-exercise\margin负值\index.html
@@ -19,6 +19,7 @@
 
 <body>
 	<ul class="list">
+		<li class="item"></li>
 		<li class="item"></li>
 		<li class="item"></li>
 		<li class="item"></li>
