使用 resize 实现图片拖拽切换预览功能

--- a/8中css布局技巧/全屏布局/两列布局/index.html
+++ b/8中css布局技巧/全屏布局/两列布局/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-07-21 10:23:56
+ * @LastEditTime: 2021-08-17 17:20:57
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \css3-exercise\8中css布局技巧\全屏布局\两列布局\index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +21,11 @@
     <!-- 经典的两列布局由左右两列组成，其特点为一列宽度固定、另一列宽度自适应和两列高度固定且相等。以下以左列宽度固定和右列宽度自适应为例，反之同理。 -->
     <div class="two-column-layout">
         <div class="left"></div>
-        <div class="right"></div>
+        <div class="right">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore voluptatem cum ullam ipsa tenetur labore eveniet illo? Placeat fuga dignissimos, odit asperiores autem, dolorem assumenda ducimus nisi vel tempora id!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Est earum, dignissimos soluta deleniti molestias debitis eveniet natus quae consequatur! Quos, inventore. Sunt, perferendis. Nulla dignissimos facere sit praesentium eius blanditiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus ut labore cumque neque alias molestiae unde numquam porro repudiandae voluptas dicta quas eaque, mollitia aut molestias! Repellendus similique quas nam?
+        Eaque atque iste provident quas maxime accusamus, nihil optio culpa? Sunt corporis modi commodi, ipsum suscipit optio, vel libero error tempora blanditiis labore inventore, amet omnis? Rerum odio omnis nulla.
+        Excepturi officiis commodi possimus saepe doloremque distinctio nobis, libero cum obcaecati. Obcaecati repellat ullam, vero consequuntur voluptatem sunt officiis voluptates? Aliquid nostrum natus harum, neque blanditiis excepturi doloribus. Incidunt, doloribus.
+        Vero corporis nihil deleniti ad commodi iusto voluptate ab, amet illo, ipsam error magnam temporibus vel iure? Veritatis beatae iure quae, voluptas vitae vero sed temporibus, dolorum a, odio dolore.
+        Molestias error explicabo voluptas nihil dicta, quisquam excepturi velit fuga a illum ullam provident. Odit natus sint et officia repudiandae! Accusantium, qui laudantium debitis ullam quasi facere beatae incidunt doloribus.</div>
     </div>
 </body>
 </html>
