--- a/步骤条/index.html
+++ b/步骤条/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-08-25 14:21:50
- * @LastEditTime: 2021-08-26 08:28:48
+ * @LastEditTime: 2021-08-26 08:45:30
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \css3-exercise\步骤条\index.html
@@ -29,7 +29,7 @@
             <p>我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条</p>
         </li> 
         <li>
-            <p>我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条</p>
+            <p>我是1竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条</p>
         </li> 
         <li>
             <p>我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条我是竖向导航条</p>
