--- a/玻璃图标悬浮/index.html
+++ b/玻璃图标悬浮/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-08-03 23:49:37
+ * @LastEditTime: 2021-08-06 12:25:00
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \elementg:\学习\myGit\css3-exercise\玻璃图标悬浮\index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +17,9 @@
 </head>
 <body>
     <section>
+		<!-- <div class="color"></div>
 		<div class="color"></div>
-		<div class="color"></div>
-		<div class="color"></div>
+		<div class="color"></div> -->
 		<ul>
 			<li><a href="">a</a></li>
 			<li><a href="">b</a></li>
