--- a/css基础/bfc/index.html
+++ b/css基础/bfc/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-07-24 11:54:49
- * @LastEditTime: 2021-07-29 17:34:20
- * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2022-01-09 23:57:55
+ * @LastEditors: your name
  * @Description: In User Settings Edit
  * @FilePath: \css3-exercise\定位练习-弹出层\index.html
 -->
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="./index.css">
 <body> 
     <div class="container bfc">
-        <img src="../imgs/test.jpg" alt="">
+        <img src="../../imgs/test.jpg" alt="">
         <p class="bfc">这次一定</p>
     </div>   
 </body>
