--- a/卡片展开/index.html
+++ b/卡片展开/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-09-06 22:08:47
- * @LastEditTime: 2021-09-07 00:02:56
- * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2022-01-19 22:59:00
+ * @LastEditors: your name
  * @Description: In User Settings Edit
  * @FilePath: \css3-exercise\卡片展开\index.html
 -->
@@ -32,21 +32,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="card">
-        <img src="https://source.unsplash.com/user/erondu/900x600/?2" alt="">
-        <h4>APP OF DAY</h4>
-        <div class="content-wrapper">
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, doloribus temporibus itaque, quisquam sunt error dolores maxime veritatis sed obcaecati iste soluta officiis qui necessitatibus amet provident dolor! Nam, laboriosam!
-                    Aliquid totam provident,</p>
-                <p>assumenda dicta officia autem dolorum, voluptate maiores cumque doloribus est harum fugit odit dolores voluptatem quaerat voluptatum! Excepturi sequi similique distinctio eos nesciunt facilis aut dolorem impedit? Neque molestiae eos ducimus</p>
-                <p>pariatur maxime enim rem cumque blanditiis adipisci dicta dolorum iste, totam aliquam veritatis sed, numquam itaque labore animi libero earum error nesciunt! Vero, minima labore! Labore? Accusantium corporis doloribus voluptatum nihil</p>
-                <p>non reprehenderit soluta sapiente dignissimos dolores? Vitae iusto explicabo accusantium quod, vero labore optio nihil ratione delectus magni nam blanditiis quia praesentium consequuntur, laborum porro? Itaque nihil, hic pariatur repudiandae</p>
-                <p>eligendi velit eum omnis, rerum recusandae iste obcaecati excepturi rem assumenda ea voluptatem minima nemo quod deleniti possimus natus officiis cum exercitationem saepe id. Debitis.</p>
-            </div>
-        </div>
-    </div> -->
 </body>
 
 <script src="./index.js"></script>
